--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "guzzle",
         "laravel",
         "facade",
-        "testing"
+        "testing",
+        "mock",
+        "fake"
     ],
     "authors": [
         {
@@ -32,7 +34,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0",
-        "illuminate/support": "^5.6"
+        "illuminate/support": "^5.6",
+        "illuminate/container": "^5.6"
     },
     "extra": {
         "laravel": {
