--- a/composer.json
+++ b/composer.json
@@ -30,12 +30,12 @@
     },
     "require": {
         "php": "^7.0",
-        "guzzlehttp/guzzle": "^6.3"
+        "guzzlehttp/guzzle": "^6.3",
+        "illuminate/support": "~5.5.0|~5.6.0|~5.7.0",
+        "illuminate/container": "~5.5.0|~5.6.0|~5.7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0",
-        "illuminate/support": "^5.6",
-        "illuminate/container": "^5.6"
+        "phpunit/phpunit": "^7.0"
     },
     "extra": {
         "laravel": {
