--- a/composer.json
+++ b/composer.json
@@ -31,8 +31,8 @@
     "require": {
         "php": "^7.0",
         "guzzlehttp/guzzle": "^6.3",
-        "illuminate/support": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0",
-        "illuminate/container": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0"
+        "illuminate/support": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0|^7.0",
+        "illuminate/container": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0|^7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0"
