--- a/composer.json
+++ b/composer.json
@@ -29,13 +29,14 @@
         }
     },
     "require": {
-        "php": "^7.0",
-        "guzzlehttp/guzzle": "^6.3",
-        "illuminate/support": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0|^7.0",
-        "illuminate/container": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0|^7.0"
+        "php": "^7.1",
+        "dms/phpunit-arraysubset-asserts": "^0.2.0",
+        "guzzlehttp/guzzle": "^6.3|^7.0",
+        "illuminate/support": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0|^7.0|^8.0",
+        "illuminate/container": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0|^7.0|^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^9.0"
     },
     "extra": {
         "laravel": {
